--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ iframe {
   font-family: Poppins-Regular;
   font-size: 13px;
   line-height: 1.5;
-  color: #666666;
+  color: #ffffff;
 }
 
 .txt2 {
@@ -200,7 +200,7 @@ iframe {
   font-family: Poppins-Bold;
   font-size: 20px;
   line-height: 1.5;
-  color: #fff;
+  color: #ffffff;
   text-transform: uppercase;
 
   width: 100%;
