--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: Poppins-Regular;
+  src: url('../fonts/poppins/Poppins-Regular.ttf');
+}
+
 html {
   overflow-y: scroll;
 }
@@ -13,6 +18,7 @@ body {
 }
 
 a {
+  font-family: Poppins-Regular;
   text-decoration: none;
   color: #1ab188;
   -webkit-transition: .5s ease;
@@ -26,7 +32,7 @@ a:hover {
   background: rgba(19, 25, 40, 0.9);
   padding: 40px;
   max-width: 600px;
-  margin: 140px auto;
+  margin: 100px auto;
   border-radius: 4px;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
 }
@@ -69,6 +75,7 @@ a:hover {
 }
 
 h1 {
+  font-family: Poppins-Regular;
   text-align: center;
   color: #ffffff;
   font-weight: 300;
@@ -76,6 +83,7 @@ h1 {
 }
 
 h2 {
+    font-family: Poppins-Regular;
     text-align: center;
     color: #1ab188;
     font-weight: 1000;
@@ -83,11 +91,13 @@ h2 {
 }
 
 span {
+    font-family: Poppins-Regular;
     color: #1ab188;
     font-weight: bold;
 }
 
 p {
+    font-family: Poppins-Regular;
     text-align: center;
     color: #ffffff;
     margin: 0px 0px 50px 0px;
@@ -136,7 +146,7 @@ label.highlight {
 }
 
 input, textarea {
-  font-size: 22px;
+  font-size: 20px;
   display: block;
   width: 100%;
   height: 100%;
@@ -179,6 +189,7 @@ textarea {
 }
 
 .button {
+  font-family: Poppins-Regular;
   border: 0;
   outline: none;
   border-radius: 0;
